# TravelGuard-

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  实现方案.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep  2026_07_22_0001_m2_travel_policy_tables.py  2026_07_22_0002_m3_budget_approval_tables.py
docs/: 00-团队开发文档索引.md  01-整体实施路线图.md  02-协作PR与验收规范.md
docs/superpowers/plans/: 2026-07-21-travelguard-team-execution.md
docs/tasks/: README.md  member-01-engineering-platform.md  member-02-travel-policy-rule-gate.md  member-03-budget-approval.md  member-04-agent-platform.md  member-05-compliance-rag.md  member-06-expense-review.md  member-07-audit-frontend-quality.md
src/: __init__.py  main.py
src/adapters/persistence/approval/: __init__.py  models.py  repository.py
src/adapters/persistence/budget/: __init__.py  models.py  repository.py
src/adapters/persistence/policy/: __init__.py  models.py  repository.py
src/adapters/persistence/travel/: __init__.py  models.py  repository.py
src/api/: __init__.py  dependencies.py  error_handlers.py
src/api/v1/approvals/: __init__.py  router.py
src/api/v1/budgets/: __init__.py  dependencies.py  router.py
src/api/v1/travel/: __init__.py  router.py
src/application/approval/: __init__.py  schemas.py  services.py
src/application/budget/: schemas.py  services.py
src/application/policy/: __init__.py  services.py
src/application/travel/: __init__.py  services.py
src/core/: __init__.py  config.py  errors.py  request_id.py  response.py  security.py
src/db/: __init__.py  base.py  repository.py  session.py
src/domain/approval/: entities.py
src/domain/budget/: __init__.py  entities.py  tools.py  value_objects.py
src/domain/policy/: __init__.py  entities.py  rules.py  value_objects.py
src/domain/travel/: __init__.py  entities.py  rules.py  schemas.py  value_objects.py
tests/integration/: test_auth.py  test_health.py
tests/integration/budget/: __init__.py  test_api.py
tests/integration/travel/: __init__.py  test_api.py
tests/unit/approval/: __init__.py  test_services.py
tests/unit/budget/: __init__.py  test_services.py
tests/unit/policy/: __init__.py  test_entities.py  test_services.py
tests/unit/travel/: __init__.py  test_entities.py  test_rules.py  test_services.py
